Fix missing color change for credits

--- a/main.css
+++ b/main.css
@@ -80,11 +80,11 @@ hr {
 
 .credit-modal-content {
   position: relative;
-  background-color: #fefefe;
+  background-color: #ADB5BD;
   color: #000;
   margin: auto;
   padding: 0;
-  border: 1px solid #888;
+  border: inherit;
   width: 50%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
@@ -112,7 +112,7 @@ hr {
 
 .credit-header {
   padding: 2px 16px;
-  background-color: #b57912;
+  background-color: #212529;
   color: white;
 }
 
